fix: フルスクリーン挙動を撤回し壁紙機能を廃止
アプリ起動時に全画面しか表示されない問題を修正しました。

- manifest の display を browser へ変更
- iOS の Apple Web App メタを撤去（フルスクリーン抑止）
- UI 自動非表示ロジックを削除（常にUIを表示）
- wallpaper.html と関連ドキュメントを削除
- README を壁紙廃止に合わせて更新

影響範囲: PWA としてのフルスクリーン起動が無効化され、通常のブラウザUIで動作します。壁紙用エンドポイントは削除されます。

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "二十四節気",
   "description": "季節の移ろいを感じる二十四節気表示アプリ",
   "start_url": "./",
-  "display": "standalone",
+  "display": "browser",
   "background_color": "#ffffff",
   "theme_color": "#1f2937",
   "orientation": "portrait",
